--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "debug": "DEBUG=* npx eleventy"
   },
   "dependencies": {
-    "@11ty/eleventy": ">=0.11.0",
-    "@serverless-jwt/netlify": ">=0.2.0"
+    "@11ty/eleventy": ">=0.11.0"
   }
 }
